# python-django

./: .dockerignore  .env.template  Dockerfile  docker-compose.yml  pyproject.toml
Auth/mysite/myauth/: urls.py  views.py
Auth/mysite/mysite/: settings.py  urls.py
CBV/mysite/shopapp/: urls.py  views.py
DRF/: requirements.txt
DRF/mysite/mysite/: settings.py
DRF/mysite/shopapp/: forms.py  serializers.py  urls.py  views.py
DatabaseAndModels/mysite/mysite/: settings.py  urls.py
DatabaseAndModels/mysite/shopapp/: models.py  views.py
DjangoAdmin/mysite/mysite/: settings.py
DjangoAdmin/mysite/shopapp/: admin.py  admin_mixin.py  models.py  urls.py
DjangoIntro/mysite/mysite/: settings.py
DjangoIntro/mysite/shopapp/: urls.py  views.py
Django_Cache/mysite/shopapp/: serializer.py  urls.py  views.py
Docs/: requirements.txt
Docs/mysite/myapiapp/: views.py
Docs/mysite/mysite/: settings.py  urls.py
Docs/mysite/shopapp/: views.py
Files/mysite/myauth/: forms.py  models.py  urls.py  views.py
Files/mysite/mysite/: settings.py  urls.py
Forms/mysite/shopapp/: forms.py  models.py  urls.py  views.py
HTML/: site.html
LinuxIntro/mysite/mysite/: settings.py
RequestsAndMiddlewares/mysite/: shopapp (2).product-export_as_csv
RequestsAndMiddlewares/mysite/mysite/: settings.py
RequestsAndMiddlewares/mysite/shopapp/: middleware.py  urls.py  views.py
Testing/mysite/shopapp/: tests.py  urls.py  views.py
i18n_l10n/mysite/mysite/: settings.py  (+1 more)
import_export/: orders.csv
logging/: requirements.txt
logging/mysite/: logs
queries/: requirements.txt
(+82 files in other folders)
